# portugython

./: README.md  SECURITY.md  pyproject.toml  setup.py
docs/playbook/: PLB-2022.md
docs/pt/: mkdocs.yaml
docs/pt/docs/tutorial/: embutidos.md
src/pegasenha/: __init__.py  pegasenha.py
src/portugython/: embutidos.py
