[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "portugython"
version = "0.0.14"
authors = [
  { name="Victor Matos (@SpacemanY2K38)", email="spacemany2k38@gmail.com" },
]
maintainers = [
    { name="Victor Matos (@SpacemanY2K38)", email="spacemany2k38@gmail.com" },
]
description = "A Portuguese translation of the Python functions/modules/packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://byteram.co/spin-offs/pynosaur/portugython/"
"Bug Tracker" = "https://github.com/Pynosaur/portugython/issues"
